@@ -4,15 +4,15 @@ Hash: SHA1
 DIST daemons-1.0.10.gem 31232 RMD160 cee32913a4be62e308e1ae0f61edf869f45a0566 SHA1 61ad4530249aab8c87c833757127cb593815b88c SHA256 a5c21d1f804a22cd3ed5106827817bb61f31ffea92e31612d89c9306add23a0f
 DIST daemons-1.0.10.tgz 30468 RMD160 1d0f57832d8e62b711f7018054c83638cf24ccb2 SHA1 377f3c04a0d480fd81ed670614a42d455723d941 SHA256 acb9532ef9525453962fa16f665c6aa96bf55d79bbcc789b64f1915f9f6d3c0d
 DIST daemons-1.0.5.gem 30208 RMD160 31e32887d46413197e77757489ea181430dc243e SHA1 0b4f1adcd0693adc7877c15ef2be7318495a541e SHA256 04d1e353ed7be25a845e08c9862097001b6f1ff28cfba8345268fe648f6ec3ac
-EBUILD daemons-1.0.10-r1.ebuild 946 RMD160 72a0f592733c5f32a33c8b97c58770f069ecf962 SHA1 6552f59bf3e8f4cba3690d040d4b8582e372f540 SHA256 23ad70a9fc8871d8fb3a39f334ebdafda88854d51d94177d3f0bd76e2d643f09
+EBUILD daemons-1.0.10-r1.ebuild 1113 RMD160 14677dc8ad4df055548630553523906a606d832a SHA1 7d6d91aa634b9ef5b35b09b14f58df27f9e3cc5b SHA256 3dc42e7eec702a1253d92ac5a640b402eec3b49f5e9e86523b968d5b7c1608ee
 EBUILD daemons-1.0.10.ebuild 429 RMD160 f8aa773539d2c7c2cbf66b3435721d76f89ba989 SHA1 b135b09173c75ccb697e3fd3c7756c65fdf6c284 SHA256 58614691ee21f12fe6da28bd1a4c603112446bd74ed8e717adfa76cb603c5f83
 EBUILD daemons-1.0.5.ebuild 500 RMD160 470f64b0bd7adb08fe97d1a3bbab0d10ac3617ee SHA1 5d253ffb1cdb4f77959505f5f1fee134e532231b SHA256 fb102a0ec22e6063ecf8398699a253cbd8b5680674d7b3e10cf2e1b5274510f9
-MISC ChangeLog 5343 RMD160 b747e4e08793bf48ac985b6555add58f70ed7baa SHA1 2b17e63150ac1b2da74e16801cf897ab927a5f95 SHA256 9469d0da6cd5985ffb29c22b3283d7880de408d00e78c3488de28b96732d5bf0
+MISC ChangeLog 5505 RMD160 4431ca4699f190287f0a26b74dffde4326ebd252 SHA1 38b82131dc3e273b64f1071f61b5e37fa653d008 SHA256 97ed8d909727f21a82fc39513daf09044ca37dd62bbf41b95710c4ea327f405c
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.13 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktHEFcACgkQTEkQYPgooqGmywCgu3Jq590pC63R49hQJk0wh+DA
-vqkAnRw8iUAzMa/7bWFYttFrnr3Dp+x5
-=7mXd
+iEYEARECAAYFAktbiMwACgkQAiZjviIA2XjPogCfQKbJHxgxoUNzAgtm5t42zgWR
+ur0Anj3os2eUEj4Y67/j6ltmSiUdbt4v
+=gc9r
 -----END PGP SIGNATURE-----
